기상청 단기예보 API 이용 후 XML Parsing 완료

--- a/time-required-data-collection-app/Info.plist
+++ b/time-required-data-collection-app/Info.plist
@@ -4,5 +4,12 @@
 <dict>
 	<key>NMFClientId</key>
 	<string>b6b5g64h65</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+		<key>NSAppTransportSecurity</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
